# codebot_mcp

./: .gitignore  pyproject.toml
src/codebot_mcp/: __init__.py  __main__.py  cli.py  config.py  db.py  http_server.py  incremental.py  init_cmd.py  server.py  setup.py  watcher.py
src/codebot_mcp/code_parsing/: __init__.py  call_resolver.py  code_parser.py  data_classes.py
src/codebot_mcp/schemas/: function.py  search.py
src/codebot_mcp/services/: embedding_service.py  search_service.py
src/codebot_mcp/utils/: bm25_utils.py  call_graph.py
tests/: test_call_graph.py  test_call_patterns.py  test_call_resolver.py  test_code_parser.py
