[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebot-mcp"
version = "0.1.0"
description = "MCP server for semantic code search using GraphRAG"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.20.0",
    "voyageai>=0.3.7",
    "numpy>=1.26.3",
    "networkx>=3.0",
    "leidenalg>=0.10.0",
    "igraph>=0.11.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.5.2",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
    "rank_bm25>=0.2.2",
    "httpx>=0.27.1",
    "watchfiles>=0.21.0",
    "python-dotenv>=1.0.0",
    "pathspec>=0.12.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
codebot = "codebot_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
